--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,6 +9,7 @@
   );
   transition: all 0.5s;
   position: relative;
+  overflow: hidden;
   &--click {
     flex: 0 0 100%;
   }
