--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,5 +10,6 @@
     flex-direction: column;
     //height: 200vh;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
